--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
         "@mdx-js/react": "^3.1.0",
         "@next/mdx": "^15.4.0-canary.51",
         "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-progress": "^1.0.3",
         "@tabler/icons-react": "^3.33.0",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/postcss": "^4.1.7",
@@ -38,11 +43,10 @@
         "react-icons": "^5.5.0",
         "react-player": "^2.16.0",
         "react-wrap-balancer": "^1.1.1",
+        "recharts": "^2.12.2",
         "remark-gfm": "^4.0.1",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss-animate": "^1.0.7",
-        "@radix-ui/react-dropdown-menu": "^2.1.15",
-        "@radix-ui/react-slot": "^1.2.3"
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
