--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "@mdx-js/loader": "^3.1.0",
         "@mdx-js/react": "^3.1.0",
         "@next/mdx": "^15.4.0-canary.51",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.0.4",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-progress": "^1.0.3",
+        "@radix-ui/react-toast": "^1.2.14",
         "@tabler/icons-react": "^3.33.0",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/postcss": "^4.1.7",
@@ -36,6 +37,7 @@
         "mini-svg-data-uri": "^1.4.4",
         "motion": "12.12.2",
         "next": "^15.3.2",
+        "next-view-transitions": "^0.3.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-fast-marquee": "^1.6.5",
