--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "@mdx-js/loader": "^3.1.0",
         "@mdx-js/react": "^3.1.0",
         "@next/mdx": "^15.4.0-canary.51",
+        "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.0.4",
