--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mapbox/rehype-prism": "^0.9.0",
         "@mdx-js/loader": "^3.1.0",
         "@mdx-js/react": "^3.1.0",
+        "@motionone/types": "^10.17.1",
         "@next/mdx": "^15.4.0-canary.51",
         "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-avatar": "^1.0.4",
@@ -37,7 +38,7 @@
         "fast-glob": "^3.3.3",
         "lucide-react": "^0.511.0",
         "mini-svg-data-uri": "^1.4.4",
-        "motion": "12.12.2",
+        "motion": "^12.12.2",
         "next": "^15.3.2",
         "next-view-transitions": "^0.3.4",
         "react": "^19.1.0",
