--- a/package.json
+++ b/package.json
@@ -63,5 +63,11 @@
         "tailwindcss": "^4.1.7",
         "tw-animate-css": "^1.3.0",
         "typescript": "^5"
+    },
+  "overrides": {
+    "react": "18.2.0",      // Erzwingt React 18 für alle Sub-Dependencies
+    "next-view-transitions": {
+      "react": "18.2.0"    // Spezifisch für dieses Paket
     }
+  }
 }
