--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
         "postcss": "^8",
         "tailwindcss": "^4.1.7",
         "tw-animate-css": "^1.3.0",
-        "typescript": "^5
+        "typescript": "^5"
   }
 }
