--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.2.14",
-        "@supabase/auth-helpers-nextjs": "^0.10.0",
+        "@supabase/ssr": "^0.1.0",
         "@supabase/supabase-js": "^2.39.6",
         "@tabler/icons-react": "^3.33.0",
         "@tailwindcss/forms": "^0.5.10",
