--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@mdx-js/loader": "^3.1.0",
         "@mdx-js/react": "^3.1.0",
         "@motionone/types": "^10.17.1",
-        "@next/mdx": "^15.4.0-canary.51",
+        "@next/mdx": "^15.3.2",
         "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.1.14",
@@ -24,7 +24,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.2.14",
-        "@supabase/ssr": "^0.1.0",
+        "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.39.6",
         "@tabler/icons-react": "^3.33.0",
         "@tailwindcss/forms": "^0.5.10",
@@ -38,7 +38,7 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "fast-glob": "^3.3.3",
-        "lucide-react": "^0.511.0",
+        "lucia-react": "^0.511.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.12.2",
         "next": "^15.3.2",
