--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,25 @@
 {
     "cSpell.words": [
+        "ändern",
+        "automatisch",
         "clsx",
+        "darf",
+        "dass",
+        "Daten",
+        "dieser",
+        "eine",
+        "greift",
+        "haben",
         "headlessui",
+        "jetzt",
+        "lucide",
         "mapbox",
         "motionone",
         "nextjs",
         "rehype",
+        "richtigen",
         "Signout",
+        "Stelle",
         "supabase",
         "tabler",
         "tailwindcss",
