--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "fast-glob": "^3.3.3",
-        "lucia-react": "^0.511.0",
+        "lucide-react": "^0.511.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.12.2",
         "next": "^15.3.2",
