--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^2.12.2",
         "remark-gfm": "^4.0.1",
+        "tailwind": "^4.0.0",
         "tailwind-merge": "^3.3.0",
         "tailwindcss-animate": "^1.0.7"
     },
