--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "nextjs",
         "rehype",
         "richtigen",
+        "rownum",
         "Signout",
         "Stelle",
         "supabase",
