Added Email Detail Anylsis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ändern",
         "automatisch",
         "clsx",
+        "criticals",
         "darf",
         "dass",
         "Daten",
