--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-slot": "^1.2.3",
@@ -45,6 +46,7 @@
         "next": "^15.3.2",
         "next-view-transitions": "^0.3.4",
         "react": "^18.3.1",
+        "react-day-picker": "^9.7.0",
         "react-dom": "^18.3.1",
         "react-fast-marquee": "^1.6.5",
         "react-icons": "^5.5.0",
