--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
         "remark-gfm": "^4.0.1",
         "tailwind": "^4.0.0",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-separator": "^1.0.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
