--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "@radix-ui/react-popover": "^1.1.14",
         "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.2.14",
         "@supabase/ssr": "^0.6.1",
@@ -36,6 +38,7 @@
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
         "@types/mdx": "^2.0.13",
+        "@types/qrcode": "^1.5.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
@@ -45,6 +48,7 @@
         "motion": "^12.12.2",
         "next": "^15.3.2",
         "next-view-transitions": "^0.3.4",
+        "qrcode": "^1.5.4",
         "react": "^18.3.1",
         "react-day-picker": "^9.7.0",
         "react-dom": "^18.3.1",
@@ -56,9 +60,7 @@
         "remark-gfm": "^4.0.1",
         "tailwind": "^4.0.0",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss-animate": "^1.0.7",
-        "@radix-ui/react-switch": "^1.0.3",
-        "@radix-ui/react-separator": "^1.0.3"
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
