--- a/package.json
+++ b/package.json
@@ -42,12 +42,17 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "exceljs": "^4.4.0",
         "fast-glob": "^3.3.3",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.1",
         "lucide-react": "^0.511.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.12.2",
         "next": "^15.3.2",
         "next-view-transitions": "^0.3.4",
+        "puppeteer": "^24.10.0",
+        "puppeteer-core": "^24.10.0",
         "qrcode": "^1.5.4",
         "react": "^18.3.1",
         "react-day-picker": "^9.7.0",
