--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "nextjs",
+    "name": "secpilot",
+    "description": "AI-Powered Email Security Software - Advanced threat protection for businesses",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -65,7 +66,7 @@
         "recharts": "^2.12.2",
         "remark-gfm": "^4.0.1",
         "stripe": "^17.5.0",
-        "tailwind": "^4.0.0",
+        "tailwindcss": "^4.1.7",
         "tailwind-merge": "^3.3.0",
         "tailwindcss-animate": "^1.0.7"
     },
@@ -77,7 +78,6 @@
         "eslint": "^9",
         "eslint-config-next": "15.3.2",
         "postcss": "^8",
-        "tailwindcss": "^4.1.7",
         "tw-animate-css": "^1.3.0",
         "typescript": "^5"
     }
