--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,9 @@ package = "@netlify/plugin-nextjs"
 
 [build.environment]
 NEXT_TELEMETRY_DISABLED = "1"
-# These are public environment variables that should be ignored by secret scanning
 SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_SUPABASE_ANON_KEY,NEXT_PUBLIC_SUPABASE_URL"
+
+# Fix serverless function bundling issues
+[functions]
+node_bundler = "esbuild"
+external_node_modules = ["@supabase/ssr", "@supabase/supabase-js", "next"]
