--- a/netlify.toml
+++ b/netlify.toml
@@ -8,8 +8,15 @@ package = "@netlify/plugin-nextjs"
 [build.environment]
 NEXT_TELEMETRY_DISABLED = "1"
 SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_SUPABASE_ANON_KEY,NEXT_PUBLIC_SUPABASE_URL"
+AWS_LAMBDA_JS_RUNTIME = "nodejs20.x"
 
-# Fix serverless function bundling issues
 [functions]
 node_bundler = "esbuild"
-external_node_modules = ["@supabase/ssr", "@supabase/supabase-js", "next"]
+external_node_modules = [
+    "@supabase/ssr",
+    "@supabase/supabase-js",
+    "next",
+    "react",
+    "react-dom",
+]
+included_files = ["src/**/*.ts", "src/**/*.tsx"]
