--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,9 @@ publish = ".next"
 [[plugins]]
 package = "@netlify/plugin-nextjs"
 
+[[plugins]]
+package = "@netlify/plugin-emails"
+
 [build.environment]
 NEXT_TELEMETRY_DISABLED = "1"
 SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_SUPABASE_ANON_KEY,NEXT_PUBLIC_SUPABASE_URL"
