--- a/netlify.toml
+++ b/netlify.toml
@@ -5,8 +5,9 @@ publish = ".next"
 [[plugins]]
 package = "@netlify/plugin-nextjs"
 
-[[plugins]]
-package = "@netlify/plugin-emails"
+# Temporarily disabled due to bundle size issues
+# [[plugins]]
+# package = "@netlify/plugin-emails"
 
 [build.environment]
 NEXT_TELEMETRY_DISABLED = "1"
