--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
         "date-fns": "^4.1.0",
         "exceljs": "^4.4.0",
         "fast-glob": "^3.3.3",
+        "form-data": "^4.0.3",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.511.0",
+        "mailgun.js": "^12.0.2",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.18.1",
         "next": "^15.3.2",
@@ -72,6 +74,7 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@netlify/functions": "^4.1.6",
         "@types/node": "^20",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.0",
