--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "fast-glob": "^3.3.3",
         "form-data": "^4.0.3",
         "html2canvas": "^1.4.1",
+        "imap-simple": "^5.1.0",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.511.0",
         "mailgun.js": "^12.0.2",
@@ -75,6 +76,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@netlify/functions": "^4.1.6",
+        "@types/imap-simple": "^4.2.10",
         "@types/node": "^20",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.0",
