--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "motion": "^12.18.1",
         "next": "^15.3.2",
         "next-view-transitions": "^0.3.4",
+        "poplib": "^0.1.7",
         "puppeteer": "^24.10.0",
         "puppeteer-core": "^24.10.0",
         "qrcode": "^1.5.4",
