--- a/netlify.toml
+++ b/netlify.toml
@@ -23,6 +23,7 @@ external_node_modules = [
     "@netlify/functions",
     "mailgun.js",
     "form-data",
+    "poplib",
 ]
 
 # Explicitly exclude heavy directories from all function bundles
@@ -49,6 +50,7 @@ external_node_modules = [
     "@netlify/functions",
     "mailgun.js",
     "form-data",
+    "poplib",
 ]
 excluded_files = [
     "emails/**",
