--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
         "dev": "next dev",
         "build": "next build",
         "analyze": "cross-env ANALYZE=true next build",
-        "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-        "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
         "start": "next start",
         "lint": "next lint"
     },
@@ -86,6 +84,7 @@
         "@types/node": "^20",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.0",
+        "cross-env": "^7.0.3",
         "eslint": "^9",
         "eslint-config-next": "15.3.2",
         "postcss": "^8",
