--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
         },
         "target": "ES2020"
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "src/global.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules", "supabase", "netlify/**/*"]
 }
