--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,16 @@ next-env.d.ts
 
 # Local Netlify folder
 .netlify
+
+# Sentry Config File
+.env.sentry-build-plugin
+
+# Folders
+/sql-migrations
+/docs
+/knowledge-base
+/other
+/emails_backup
+/sql
+/supabase
+/.vscode
