--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.2.14",
+        "@sentry/nextjs": "^9.30.0",
         "@stripe/stripe-js": "^4.4.0",
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.39.6",
