--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@ package = "@netlify/plugin-nextjs"
 
 
 [build.environment]
+NODE_OPTIONS = "--max-old-space-size=4096"
 NEXT_TELEMETRY_DISABLED = "1"
 SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_SUPABASE_ANON_KEY,NEXT_PUBLIC_SUPABASE_URL"
 # Uncomment the line below to skip Netlify Forms validation if needed
