--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
         "analyze": "cross-env ANALYZE=true next build",
         "start": "next start",
         "lint": "next lint"
